# Solana_projects

crud_blog_post/: README.md  package-lock.json  package.json  pnpm-lock.yaml
crud_blog_post/anchor/: Anchor.toml  codama.js
crud_blog_post/anchor/programs/crud-blog-post/: Cargo.toml
crud_blog_post/anchor/programs/crud-blog-post/src/: lib.rs
crud_blog_post/anchor/programs/crud-blog-post/src/states/: mod.rs
crud_blog_post/anchor/src/: crud-blog-post-exports.ts  index.ts
crud_blog_post/anchor/tests/: crud-blog-post.test.ts
crud_blog_post/src/app/: layout.tsx
crud_blog_post/src/app/crud-blog-post/: page.tsx
crud_blog_post/src/components/: app-header.tsx
crud_blog_post/src/features/crud-blog-post/: crud-blog-post-feature.tsx
program_architecture/: README.md  package-lock.json  package.json
program_architecture/anchor/: Anchor.toml  codama.js
program_architecture/anchor/programs/program-architecture/: Cargo.toml
program_architecture/anchor/programs/program-architecture/src/: lib.rs
program_architecture/anchor/src/: index.ts  program-architecture-exports.ts
program_architecture/anchor/tests/: program-architecture.test.ts
program_architecture/src/app/: layout.tsx
program_architecture/src/components/: app-header.tsx
voting_app/: .gitignore  README.md  package-lock.json  package.json
voting_app/anchor/: Anchor.toml  codama.js
voting_app/anchor/src/: index.ts  voting_app-exports.ts
voting_app/anchor/tests/: voting_app.test.ts
voting_app/src/app/: layout.tsx
voting_app/src/app/api/: route.ts  (+2 more)
voting_app/src/components/: app-header.tsx
(+38 files in other folders)
